@@ -1,0 +1,4 @@
+appliedkernels="2.6.14"
+source="fbsplash-0.9.2-r5-2.6.14.patch"
+source_url=http://dev.gentoo.org/~spock/projects/gensplash/archive/$source
+source_gpg="gurus.gpg:info/patches-sigs/gensplash/${source}.sig"
